Fixing some tests