@@ -10,7 +10,6 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
@@ -65,9 +64,9 @@ public class TestShutdownTask {
                     .terminator(conf.terminator())
                     .register();
         ShutdownTask.shutdown();
-        Assert.assertEquals(List.of(), Arrays.stream(receivers).filter(Objects::nonNull).collect(Collectors.toList()));
-        Assert.assertEquals(List.of(), Arrays.stream(eventProcessors).filter(Objects::nonNull).collect(Collectors.toList()));
-        Assert.assertEquals(List.of(), Arrays.stream(senders).filter(Objects::nonNull).collect(Collectors.toList()));
+        Assert.assertEquals(List.of(), Arrays.stream(receivers).filter(Objects::nonNull).toList());
+        Assert.assertEquals(List.of(), Arrays.stream(eventProcessors).filter(Objects::nonNull).toList());
+        Assert.assertEquals(List.of(), Arrays.stream(senders).filter(Objects::nonNull).toList());
     }
 
     boolean futureGet(Future<Boolean> f) {
